# BspiderServer

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
doc/: cpp_refactor_plan.md
main/: CMakeLists.txt  app_main.c  main.c
main/app/: app_runtime.cpp  app_runtime.h
main/hal/: board.h
main/services/http/: http_client.c  http_client.h
main/services/monitor/: monitor.c  monitor.h
main/services/sdcard/: sdcard.c  sdcard.h
main/services/wifi/: wifi.c  wifi.h
main/tasks/http/: http_task.c  http_task.h
main/tasks/monitor/: monitor_task.c  monitor_task.h
main/tasks/wifi/: wifi_task.c  wifi_task.h
